работа нада задачами выполняется